--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title> ภาษา HTML </title>
 </head> 
      <body>
-<h1>ภาษา HTML คืออะไร? </h1>
+<h1>ภาษา yok  คืออะไร? </h1>
 
      </body>
     </html>
